[tool.poetry]
name = "pyvariot"
version = "0.2.0"
description = "Python CLI and module to query the VARIoT IoT vulnerabilities and exploits databases"
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "BSD-3-Clause"
repository = "https://github.com/cve-search/pyvariot"
documentation = "https://pyvariot.readthedocs.io/en/latest/"

readme = "README.md"

classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Security',
    'Topic :: Internet',
]

[tool.poetry.scripts]
pyvariot = 'pyvariot:main'

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
Sphinx = { version = "^7.3.7", optional = true }

[tool.poetry.extras]
docs = ["Sphinx"]

[tool.poetry.group.dev.dependencies]
pylint = "^3.2.3"
mypy = "^1.10.0"
types-requests = "^2.32.0.20240602"
ipython = "^8.25.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry_core"]
build-backend = "poetry.core.masonry.api"
