[project]
name = "pyvariot"
version = "0.2.1"
description = "Python CLI and module to query the VARIoT IoT vulnerabilities and exploits databases"
authors = [{name="Raphaël Vinot", email="raphael.vinot@circl.lu"}]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.10"

dynamic = [ "classifiers" ]

dependencies = [
    "requests (>=2.32.3)"
]

[project.urls]
repository = "https://github.com/cve-search/pyvariot"
documentation = "https://pyvariot.readthedocs.io/en/latest/"

[tool.poetry]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Operating System :: POSIX :: Linux',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Intended Audience :: Information Technology',
    'Topic :: Security',
    'Topic :: Internet',
]

[project.scripts]
pyvariot = 'pyvariot:main'

[project.optional-dependencies]
docs = ["Sphinx (>=8.1.3)"]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"
mypy = "^1.14.1"
types-requests = "^2.32.0.20241016"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
